src/components/SearchBar/SearchBar.css
.search{
  display: flex;
  width: var(--layout-width);
}

.search-bar{
  display: flex;
  flex-wrap: wrap;
  gap: 10px;
  position: relative;
  width: 100%;
}

.search-bar * {
  border-radius: 10px;
}

.search-bar > .bi-search{
  position: absolute;
  left: 10px;
  transform:translateY(38%);
}

.search-not-visible + .search {
  display: none;
}

@media screen and (max-width: 768px){
  .search {
    justify-content: center;
  }

  .search-bar{
    width: auto;
  }
}

